rustdocs/errors/rust-bitcoin-p2p-src-message.rs.txt
error[E0433]: failed to resolve: unresolved import
 --> ../rust-bitcoin/p2p/src/message.rs:8:5
  |
8 | use alloc::borrow::{Cow, ToOwned};
  |     ^^^^^
  |     |
  |     unresolved import
  |     help: a similar path exists: `std::alloc`

error[E0433]: failed to resolve: unresolved import
 --> ../rust-bitcoin/p2p/src/message.rs:9:5
  |
9 | use alloc::boxed::Box;
  |     ^^^^^
  |     |
  |     unresolved import
  |     help: a similar path exists: `std::alloc`

error[E0433]: failed to resolve: unresolved import
  --> ../rust-bitcoin/p2p/src/message.rs:10:5
   |
10 | use alloc::string::String;
   |     ^^^^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::alloc`

error[E0433]: failed to resolve: unresolved import
  --> ../rust-bitcoin/p2p/src/message.rs:12:5
   |
12 | use alloc::vec::Vec;
   |     ^^^^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::alloc`

error[E0432]: unresolved import `alloc`
  --> ../rust-bitcoin/p2p/src/message.rs:11:5
   |
11 | use alloc::vec;
   |     ^^^^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::alloc`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/p2p/src/message.rs:17:5
   |
17 | use bitcoin::consensus::encode::{self, Decodable, Encodable, ReadExt, Wr...
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
 8 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/p2p/src/message.rs:18:5
   |
18 | use bitcoin::merkle_tree::MerkleBlock;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
 8 + extern crate bitcoin;
   |

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/p2p/src/message.rs:13:5
   |
13 | use core::{cmp, fmt};
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `primitives`
  --> ../rust-bitcoin/p2p/src/message.rs:19:5
   |
19 | use primitives::{block, transaction};
   |     ^^^^^^^^^^ use of unresolved module or unlinked crate `primitives`
   |
help: you might be missing a crate named `primitives`, add it to your project and import it in your code
   |
 8 + extern crate primitives;
   |

error[E0432]: unresolved import `encoding`
  --> ../rust-bitcoin/p2p/src/message.rs:20:5
   |
20 | use encoding;
   |     ^^^^^^^^ no `encoding` in the root

error[E0432]: unresolved import `hashes`
  --> ../rust-bitcoin/p2p/src/message.rs:21:5
   |
21 | use hashes::sha256d;
   |     ^^^^^^ use of unresolved module or unlinked crate `hashes`
   |
help: you might be missing a crate named `hashes`, add it to your project and import it in your code
   |
 8 + extern crate hashes;
   |

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/p2p/src/message.rs:22:5
   |
22 | use internals::ToU64 as _;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 8 + extern crate internals;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/p2p/src/message.rs:23:10
   |
23 | use io::{self, BufRead, Read, Write};
   |          ^^^^ no `io` in the root
   |
   = help: consider importing one of these modules instead:
           std::io
           std::os::unix::io

error[E0432]: unresolved import `units`
  --> ../rust-bitcoin/p2p/src/message.rs:24:5
   |
24 | use units::FeeRate;
   |     ^^^^^ use of unresolved module or unlinked crate `units`
   |
help: you might be missing a crate named `units`, add it to your project and import it in your code
   |
 8 + extern crate units;
   |

error[E0432]: unresolved import `crate::address`
  --> ../rust-bitcoin/p2p/src/message.rs:26:12
   |
26 | use crate::address::{AddrV2Message, Address};
   |            ^^^^^^^ use of unresolved module or unlinked crate `address`
   |
help: you might be missing a crate named `address`, add it to your project and import it in your code
   |
 8 + extern crate address;
   |

error[E0432]: unresolved import `crate::consensus`
  --> ../rust-bitcoin/p2p/src/message.rs:27:12
   |
27 | use crate::consensus::{impl_consensus_encoding, impl_vec_wrapper};
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
   |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
   |
 8 + extern crate consensus;
   |

error[E0432]: unresolved imports `crate::message_blockdata`, `crate::message_bloom`, `crate::message_compact_blocks`, `crate::message_filter`, `crate::message_network`, `crate::Magic`
  --> ../rust-bitcoin/p2p/src/message.rs:29:5
   |
29 |     message_blockdata, message_bloom, message_compact_blocks, message_filter, message_network,
   |     ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^ no `message_network` in the root
   |     |                  |              |                       |
   |     |                  |              |                       no `message_filter` in the root
   |     |                  |              no `message_compact_blocks` in the root
   |     |                  no `message_bloom` in the root
   |     no `message_blockdata` in the root
30 |     Magic,
   |     ^^^^^ no `Magic` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
   --> ../rust-bitcoin/p2p/src/message.rs:307:6
    |
307 | impl bitcoin::consensus::encode::Encodable for FeeFilter {
    |      ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
    |
    = help: you might be missing a crate named `bitcoin`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
   --> ../rust-bitcoin/p2p/src/message.rs:321:6
    |
321 | impl bitcoin::consensus::encode::Decodable for FeeFilter {
    |      ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
    |
    = help: you might be missing a crate named `bitcoin`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
   --> ../rust-bitcoin/p2p/src/message.rs:324:23
    |
324 |     ) -> Result<Self, bitcoin::consensus::encode::Error> {
    |                       ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
    |
    = help: you might be missing a crate named `bitcoin`

error[E0405]: cannot find trait `TryFrom` in this scope
  --> ../rust-bitcoin/p2p/src/message.rs:69:6
   |
69 | impl TryFrom<String> for CommandString {
   |      ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
 8 + use std::convert::TryFrom;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
  --> ../rust-bitcoin/p2p/src/message.rs:77:6
   |
77 | impl TryFrom<Box<str>> for CommandString {
   |      ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
 8 + use std::convert::TryFrom;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
  --> ../rust-bitcoin/p2p/src/message.rs:85:10
   |
85 | impl<'a> TryFrom<&'a str> for CommandString {
   |          ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
 8 + use std::convert::TryFrom;
   |

error[E0425]: cannot find type `FeeFilterEncoder` in this scope
   --> ../rust-bitcoin/p2p/src/message.rs:355:24
    |
355 |     type Encoder<'e> = FeeFilterEncoder;
    |                        ^^^^^^^^^^^^^^^^
...
365 | pub struct FeeFilterDecoder(encoding::ArrayDecoder<8>);
    | ------------------------------------------------------- similarly named struct `FeeFilterDecoder` defined here
    |
help: a struct with a similar name exists
    |
355 -     type Encoder<'e> = FeeFilterEncoder;
355 +     type Encoder<'e> = FeeFilterDecoder;
    |

error[E0425]: cannot find type `RawNetworkMessageEncoder` in this scope
    --> ../rust-bitcoin/p2p/src/message.rs:736:24
     |
 736 |     type Encoder<'e> = RawNetworkMessageEncoder;
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^
...
1059 | pub struct RawNetworkMessageDecoder {
     | ----------------------------------- similarly named struct `RawNetworkMessageDecoder` defined here
     |
help: a struct with a similar name exists
     |
 736 -     type Encoder<'e> = RawNetworkMessageEncoder;
 736 +     type Encoder<'e> = RawNetworkMessageDecoder;
     |

error[E0277]: `CommandStringError` doesn't implement `std::fmt::Display`
   --> ../rust-bitcoin/p2p/src/message.rs:232:28
    |
232 | impl std::error::Error for CommandStringError {
    |                            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `std::fmt::Display` is not implemented for `CommandStringError`
   --> ../rust-bitcoin/p2p/src/message.rs:217:1
    |
217 | pub struct CommandStringError {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `std::error::Error`
   --> library/core/src/error.rs:59:0

error: aborting due to 26 previous errors

Some errors have detailed explanations: E0277, E0405, E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0277`.
